styles/jqui.css
/* $Id$
	Jqui (jqui.css) for Tikiwiki CMS/Groupware.
	Visit http://themes.tikiwiki.org for more information.
*/
 
/* Import foundation CSS files. */
@import "lite/lite.css";
@import "layout/layout.css";
@import "layout/design.css";

/***** XHTML Elements (body tag here,
			others follow Layout) *****/ 
body {
	font: 76%/1.5em Verdana,Arial,sans-serif;
	color: #000;
	background: #fff}

*:first-child+html body {font-size: 74% !important}

 /***** Layout (overrides layout.css;
		also styling of page layout divs)  *****/
#fixedwidth {
	display: table;
	margin: auto;
	margin-top: 0;
	margin-bottom: 0;
	width: 990px;
}
#fixedwidth[id] {
	height: auto;
}
							    
#main {
	text-align: left
}

#c1c2	#wrapper	#col1.marginleft  {
	margin-left: 200px;
}

#c1c2	#wrapper	#col1.marginright {
	margin-right: 200px;
}

#c1c2	#wrapper	#col1	.content {
	background: transparent;
}

#c1c2 #wrapper #col1 #tiki-center {
	padding: 10px;
}

* html #tiki-center {font-size: 1em}
	
#c1c2 #col2 {
	width: 200px;
	overflow: visible;
}

#c1c2 #col2 .content {margin-left: 4px}

#col3 {
	width: 200px;
	margin-left: -200px;
}

#col3 .content {margin-right: 4px;}

.footerbgtrap {
	color: #363636;
	background: #fff url(../lib/jquery/jquery-ui/themes/smoothness/images/ui-bg_flat_75_ffffff_40x100.png);
	border: 1px solid #d3d3d3;
	border-bottom: none;
	margin: 10px;
	margin-bottom: 0;
	text-align: center;
}

/***** XHTML Elements (other than body tag) ******/
a,
a:visited {
	color: #0001a6;
	text-decoration: none;
}
 
a:active, a:hover {
	color: #6a6bd7;
	text-decoration: none;
}

h1 {
	font-size: 180%;
}
	
h2 {
	font-size: 160%;
}	

h3 {
	font-size: 140%;
}
	
h4 {
	font-size: 120%;
}

h5 {
	font-size: 110%;
}

fieldset {
	border: 1px solid #d4d4d4}
	
legend {
	color: #000;
}

.navbar {
	line-height: 220%;
}

span.button a,
span.button a:visited,
button,
input[type="reset"],
input[type="submit"],
span.button input,
.calbuttonBox a {
	margin: .5em .4em .5em 0;
	cursor: pointer;
	line-height: 1.4em;
	width: auto;
	overflow: visible;
	border: 1px solid #d3d3d3;
	background: #e6e6e6 url(../lib/jquery/jquery-ui/themes/base/images/ui-bg_glass_75_e6e6e6_1x400.png) 50% 50% repeat-x;
	font-weight: normal;
	color: #555555;
	outline: none; 
}

span.button a:hover,
.button a:hover,
button:hover,
input[type="reset"]:hover,
input[type="submit"]:hover,
span.button input:hover,
.calbuttonBox:hover {
	margin: .5em .4em .5em 0;
	border: 1px solid #999999;
	background: #dadada url(../lib/jquery/jquery-ui/themes/base/images/ui-bg_glass_75_e6e6e6_1x400.png) 50% 50% repeat-x;
	font-weight: normal;
	color: #212121;
	outline: none;
}
	
.highlight,
span.highlight a {
	border: 1px solid #fcefa1;
	background: #fbf9ee url(../lib/jquery/jquery-ui/themes/base/images/ui-bg_flat_0_aaaaaa_40x100.png) 50% 50% repeat-x;
	color: #363636;
}

span.button.highlight {
	border: none;
}

span.button.highlight a {
	border: 1px solid #fcefa1;
	background: #fbf9ee url(../lib/jquery/jquery-ui/themes/base/images/ui-bg_flat_0_aaaaaa_40x100.png) 50% 50% repeat-x;
	color: #363636;
}

div.error {
	background: none;
}


/***** Site Header & Identity *****/
#header-top {
	min-height: 40px;
}

#sioptions {
	padding: 0 10px;
}

#sitetitles {
	font-weight: bold;
}

#sitetitle {
	font-size: 2.4em;
}

#sitesubtitle {
	font-size: 1.2em;
	margin-top: 10px;
}

#tiki-top {
	padding: .5em .3em .3em 1em; position: relative;
	border: 1px solid #aaaaaa;
	background: #cccccc url(../lib/jquery/jquery-ui/themes/base/images/ui-bg_highlight-soft_75_cccccc_1x100.png) 50% 50% repeat-x;
	color: #222222;
	margin: 0 10px 10px;
	font-size: 1.1em;
}
	
/****** Menus, Links ******/
/** CSS (suckerfish) menus **/

/* default and topbar dropdown typography (colors) and padding */
.cssmenu_horiz a,
.cssmenu_vert a,
#tiki-top .cssmenu_horiz li ul li a,
#tiki-top .cssmenu_horiz li:hover ul li a {
	background: #fff;
	font-weight: normal;
	text-decoration: none;
	padding: .5em 1em;
}

.cssmenu_horiz li ul li,
.cssmenu_vert li ul li {
	background:	#e2e2e2;
	border: 1px solid #aaa;
	border-top: 0;
	margin-bottom: -1px
}

.cssmenu_horiz li ul li:first-child,
.cssmenu_vert li ul li:first-child {
	border-top: 1px solid #aaa;
}

#tiki-top .cssmenu_horiz li a {
	padding: 14px 1em;
	font-size: 12px;
	font-weight: bold;
	text-decoration: none;
	background: none;
	border-right: 1px solid #aaa;
}
 
#tiki-top .cssmenu_horiz li:hover a {
	text-decoration: none;
}

/* ul ul top compensation for padding */
#tiki-top .cssmenu_horiz li:hover ul,
#tiki-top .cssmenu_horiz li.sfHover ul {
	top: 44px;
}

#secondary_site_menu .cssmenu_horiz li:hover ul,
#secondary_site_menu .cssmenu_horiz li.sfHover ul {
	top: 22px;
}

#tiki-top .cssmenu_horiz li:hover ul ul,
#tiki-top .cssmenu_horiz li.sfHover ul ul,
#secondary_site_menu .cssmenu_horiz li:hover ul ul,
#secondary_site_menu .cssmenu_horiz li.sfHover ul ul {
	top: -1px;
}

#tiki-top .cssmenu_horiz li.menuSection a {
	padding-right: 20px;
}

/* left column width */
#col2 ul.cssmenu_vert {
	padding-left: 0;
}

#col2 .cssmenu_vert,
#col2 .cssmenu_vert li {
	width: 166px;
}

/* offset from left column (matches above) */
#col2 .cssmenu_vert li:hover ul,
#col2 .cssmenu_vert li.sfHover ul {
	left: 166px;
}

/* return ul ul ... to default */
#col2 .cssmenu_vert li:hover ul,
#col2 .cssmenu_vert li.sfHover ul,
#col2 .cssmenu_vert li:hover ul li,
#col2 .cssmenu_vert li.sfHover ul li {
	width: 10em;
}

/* return ul ul ... to default */
#col2 .cssmenu_vert li li:hover ul,
#col2 .cssmenu_vert li li.sfHover ul {
	left: 10em;
}

a .sf-sub-indicator {
	top: 0.5em;
}

.sf-sub-indicator {
	background: url(thenews/arrows-005faa.png) no-repeat -10px -100px;
}

#tiki-top .cssmenu_horiz li a .sf-sub-indicator {top: 1.2em}

#tiki-top .cssmenu_horiz li ul li  a .sf-sub-indicator {
	background: url(thenews/arrows-005faa.png) no-repeat;
	top: 0.5em;
}
/* ... */

